--- a/req-cuti.html
+++ b/req-cuti.html
@@ -174,7 +174,7 @@
   <!-- 🔗 LINK LIHAT REQUEST -->
   <div id="viewRequest" class="view-link">
     <a href="https://hong-ark.github.io/req-cuti/view-request.html" target="_blank">
-      📊 Lihat Request
+      📊 Lihat Hasil Inputan Request
     </a>
   </div>
 
@@ -241,3 +241,4 @@
 
 </body>
 </html>
+
