--- a/req-cuti.html
+++ b/req-cuti.html
@@ -173,7 +173,7 @@
 
   <!-- 🔗 LINK LIHAT REQUEST -->
   <div id="viewRequest" class="view-link">
-    <a href="https://hong-ark.github.io/req-cuti/view-request.html" target="_blank">
+    <a href="https://hong-ark.github.io/req-cuti/lihat.html" target="_blank">
       📊 Lihat Hasil Inputan Request
     </a>
   </div>
@@ -241,4 +241,5 @@
 
 </body>
 </html>
+
 
