--- a/req-cuti.html
+++ b/req-cuti.html
@@ -174,7 +174,7 @@
   <!-- 🔗 LINK LIHAT REQUEST -->
   <div id="viewRequest" class="view-link">
     <a href="https://hong-ark.github.io/req-cuti/lihat.html" target="_blank">
-      📊 Lihat Hasil Inputan Request
+      LIHAT HASIL INPUTAN REQUEST
     </a>
   </div>
 
@@ -241,5 +241,6 @@
 
 </body>
 </html>
+
 
 
