--- a/lihat.html
+++ b/lihat.html
@@ -147,8 +147,8 @@
 
 <!-- ===== HEADER ===== -->
 <div class="header">
-  <h1>📊 Data Request Libur & Cuti</h1>
-  <p>Daftar request karyawan · Read-only</p>
+  <h1>DATE REQUEST LIBUR - CUTI BULAN JANUARI 2026</h1>
+  <p>Klik untuk menampilkan data request terbaru</p>
 </div>
 
 <div class="container">
@@ -156,7 +156,7 @@
   <!-- ===== ACTION ===== -->
   <div class="actions">
     <button class="btn" onclick="loadData()">🔄 Muat Data</button>
-    <div class="hint">Klik untuk menampilkan data request terbaru</div>
+    <div class="hint"></div>
   </div>
 
   <!-- ===== TABLE CARD ===== -->
@@ -244,3 +244,4 @@ function render(data) {
 
 </body>
 </html>
+
