--- a/lihat.html
+++ b/lihat.html
@@ -147,9 +147,8 @@
 
 <!-- ===== HEADER ===== -->
 <div class="header">
-  <h1>DATE REQUEST LIBUR - CUTI BULAN JANUARI 2026</h1>
-  <p>Klik untuk menampilkan data request terbaru</p>
-</div>
+  <h1>DATA REQUEST LIBUR - CUTI BULAN JANUARI 2026</h1>
+ </div>
 
 <div class="container">
 
@@ -244,4 +243,5 @@ function render(data) {
 
 </body>
 </html>
+
 
